# tldr_bot

./: .gitignore  Dockerfile  JupyterDockerfile  deploy_local.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy,yml  deploy.yml
config/: config.py
db/: db.py  models.py
handlers/: archiver.py  bot_interactions.py  subscription.py  tldr.py
k8s/: bot.yaml  postgres-pv.yaml  postgres.yaml
notebooks/: Scratch.ipynb
scheduler/: daily_tldr.py
templates/: scripts.py
tldr/: tldr.py
tldr_bot/: bot.py
